--- a/React Js/bootstrap/package.json
+++ b/React Js/bootstrap/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router": "^7.8.2",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
