--- a/React Js/nextjs/package.json
+++ b/React Js/nextjs/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@next/env": "^15.5.4",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "js-cookie": "^3.0.5",
     "next": "15.5.4",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
