--- a/Backend/mongoose-project/.env
+++ b/Backend/mongoose-project/.env
@@ -1,3 +1,4 @@
 PORT=5000
-user_name=sainikrishnabhati_db_user
-password=L6VO726ZMQI4r5y1
+user_name=sandeepbhati
+password=Ly22KGnpQLST4JeQ
+db_name=monsta
