--- a/Backend/Project/admin/package.json
+++ b/Backend/Project/admin/package.json
@@ -20,6 +20,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
+    "react-responsive-pagination": "^2.11.3",
     "react-router-dom": "^6.29.0",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
