--- a/Backend/Project/api/.env
+++ b/Backend/Project/api/.env
@@ -3,3 +3,4 @@ user_name=sandeepbhati
 password=Ly22KGnpQLST4JeQ
 db_name=monsta
 default_image=http://localhost:5000/uploads/default/
+category_image=http://localhost:5000/uploads/categories/
