--- a/Backend/Project/admin/.env
+++ b/Backend/Project/admin/.env
@@ -1,3 +1,4 @@
 VITE_BASE_URL=http://localhost:5000
 VITE_COLOR_API=api/admin/color
 VITE_MATERIAL_API=api/admin/material
+VITE_PARENT_CATEGORY_API=api/admin/category
