--- a/Backend/Project/admin/.env
+++ b/Backend/Project/admin/.env
@@ -2,3 +2,4 @@ VITE_BASE_URL=http://localhost:5000
 VITE_COLOR_API=api/admin/color
 VITE_MATERIAL_API=api/admin/material
 VITE_PARENT_CATEGORY_API=api/admin/category
+VITE_SUB_CATEGORY_API=api/admin/sub-category
