--- a/Backend/Project/api/.env
+++ b/Backend/Project/api/.env
@@ -4,3 +4,4 @@ password=Ly22KGnpQLST4JeQ
 db_name=monsta
 default_image=http://localhost:5000/uploads/default/
 category_image=http://localhost:5000/uploads/categories/
+product_image=http://localhost:5000/uploads/products/
