--- a/Backend/Project/admin/.env
+++ b/Backend/Project/admin/.env
@@ -4,3 +4,4 @@ VITE_MATERIAL_API=api/admin/material
 VITE_PARENT_CATEGORY_API=api/admin/category
 VITE_SUB_CATEGORY_API=api/admin/sub-category
 VITE_SUB_SUB_CATEGORY_API=api/admin/sub-sub-category
+VITE_PRODUCT_API=api/admin/products
