--- a/Backend/Project/api/.env
+++ b/Backend/Project/api/.env
@@ -5,3 +5,4 @@ db_name=monsta
 default_image=http://localhost:5000/uploads/default/
 category_image=http://localhost:5000/uploads/categories/
 product_image=http://localhost:5000/uploads/products/
+secret_key=1234567890
