--- a/Backend/Project/api/.env
+++ b/Backend/Project/api/.env
@@ -5,4 +5,8 @@ db_name=monsta
 default_image=http://localhost:5000/uploads/default/
 category_image=http://localhost:5000/uploads/categories/
 product_image=http://localhost:5000/uploads/products/
+user_image=http://localhost:5000/uploads/users/
 secret_key=1234567890
+Email=krishnabhati5100@gmail.com
+GMAIL_Password=gbmrjeqvvezxxyvo
+resetUrl=http://localhost:3000/reset-password/
