--- a/Backend/Project/api/package.json
+++ b/Backend/Project/api/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "slugify": "^1.6.6"
   }
 }
