--- a/Backend/Project/website/package.json
+++ b/Backend/Project/website/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.1.0",
     "google-fonts": "^1.0.0",
+    "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -19,6 +21,7 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
